[gd_scene load_steps=10 format=3 uid="uid://b40a5xbf7kprf"]

[ext_resource type="Script" path="res://BattleScene/battle_scene.gd" id="1_k1pcu"]
[ext_resource type="Texture2D" uid="uid://c40mrr4627jnh" path="res://Assets/Backgrounds/battle_background.png" id="2_elngy"]
[ext_resource type="PackedScene" uid="uid://2107ihkl757j" path="res://BattleScene/Slots/enemy_card_slot.tscn" id="5_dk17i"]
[ext_resource type="PackedScene" uid="uid://lgsdqiqjq8ma" path="res://Player/PlayerField/player_field.tscn" id="5_qxwnj"]
[ext_resource type="AudioStream" uid="uid://btkibrgmxotux" path="res://Assets/Music/battle_loop.mp3" id="7_hk65r"]
[ext_resource type="AudioStream" uid="uid://bq2xlldqbm6q3" path="res://Assets/Music/umph-47201.mp3" id="8_puwgj"]
[ext_resource type="AudioStream" uid="uid://k4a8ft77r0np" path="res://Assets/Music/flipcard.mp3" id="9_7l6lx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w2yei"]
bg_color = Color(1, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="Theme" id="Theme_oox0e"]
/styles/border = SubResource("StyleBoxFlat_w2yei")

[node name="BattleScene" type="Node2D" groups=["Persist"]]
script = ExtResource("1_k1pcu")

[node name="Abilities" type="Node" parent="."]

[node name="CombatEffects" type="Node" parent="."]

[node name="Cards" type="Node" parent="."]

[node name="Background" type="Sprite2D" parent="."]
scale = Vector2(1.00156, 1.00093)
texture = ExtResource("2_elngy")
centered = false

[node name="PlayerField" parent="." instance=ExtResource("5_qxwnj")]

[node name="EnemyField" parent="." instance=ExtResource("5_dk17i")]

[node name="Battle" type="Button" parent="."]
visible = false
offset_left = 775.0
offset_top = 392.0
offset_right = 880.0
offset_bottom = 423.0
text = "Battle Phase"

[node name="Ability" type="Button" parent="."]
visible = false
offset_left = 1021.0
offset_top = 393.0
offset_right = 1078.0
offset_bottom = 424.0
text = "Ability"

[node name="EndTurn" type="Button" parent="."]
offset_left = 1400.0
offset_top = 962.0
offset_right = 1478.0
offset_bottom = 993.0
text = "End Turn"

[node name="Draw" type="Button" parent="."]
visible = false
offset_left = 778.0
offset_top = 347.0
offset_right = 878.0
offset_bottom = 378.0
text = "Draw Phase"

[node name="EndPhase" type="Button" parent="."]
visible = false
offset_left = 1007.0
offset_top = 292.0
offset_right = 1095.0
offset_bottom = 323.0
text = "End Phase"

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 556.0
offset_top = 312.0
offset_right = 596.0
offset_bottom = 352.0

[node name="Light" type="DirectionalLight2D" parent="."]
color = Color(0.982343, 0.982342, 0.982342, 1)
energy = 16.0
blend_mode = 2
shadow_enabled = true
height = 0.5

[node name="HUD" type="Window" parent="."]
transparent_bg = true
mode = 2
borderless = true

[node name="Line" type="ColorRect" parent="HUD"]
offset_right = 40.0
offset_bottom = 40.0
color = Color(1, 0, 0, 1)

[node name="Text" type="RichTextLabel" parent="HUD"]
offset_right = 40.0
offset_bottom = 40.0
theme_override_font_sizes/normal_font_size = 70
bbcode_enabled = true
text = "Phases In The Game"
fit_content = true
autowrap_mode = 0

[node name="TopBlock" type="Panel" parent="."]

[node name="Line" type="ColorRect" parent="TopBlock"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme = SubResource("Theme_oox0e")
color = Color(1, 0, 0, 1)

[node name="Discard" type="RichTextLabel" parent="TopBlock"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_font_sizes/normal_font_size = 40
text = "Choose a card to discard"
autowrap_mode = 0

[node name="LeftBlock" type="Panel" parent="."]

[node name="RightBlock" type="Panel" parent="."]

[node name="Win" type="Button" parent="."]
offset_left = 1284.0
offset_top = 989.0
offset_right = 1374.0
offset_bottom = 1020.0
text = "Win
"

[node name="Log" type="RichTextLabel" parent="."]
offset_left = 629.0
offset_top = 183.0
offset_right = 1237.0
offset_bottom = 756.0
fit_content = true
scroll_following = true

[node name="BattleSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_hk65r")
volume_db = -20.0

[node name="ReceiveDamageSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_puwgj")

[node name="FlipCardSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_7l6lx")
volume_db = 5.0

[node name="WinSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_7l6lx")
volume_db = 5.0

[node name="LoseSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_7l6lx")
volume_db = 5.0

[connection signal="pressed" from="Battle" to="." method="_on_battle_pressed"]
[connection signal="pressed" from="Ability" to="." method="_on_ability_pressed"]
[connection signal="pressed" from="EndTurn" to="." method="_on_end_turn_pressed"]
[connection signal="pressed" from="Draw" to="." method="_on_draw_phase_pressed"]
[connection signal="pressed" from="EndPhase" to="." method="_on_end_phase_pressed"]
[connection signal="pressed" from="Win" to="." method="_on_win_pressed"]
